libs/sdk-flutter/ios/Classes/frb_generated.h

typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_opening_fee_params {
  uint64_t min_msat;
  uint32_t proportional;
  struct wire_cst_list_prim_u_8_strict *valid_until;
  uint32_t max_idle_time;
  uint32_t max_client_to_self_delay;
  struct wire_cst_list_prim_u_8_strict *promise;
} wire_cst_opening_fee_params;
typedef struct wire_cst_reverse_swap_fees_request {
  uint64_t *send_amount_sat;
  uint32_t *claim_tx_feerate;
} wire_cst_reverse_swap_fees_request;
typedef struct wire_cst_prepare_refund_request {
  struct wire_cst_list_prim_u_8_strict *swap_address;
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_prepare_refund_request;
typedef struct wire_cst_receive_onchain_request {
  struct wire_cst_opening_fee_params *opening_fee_params;
} wire_cst_receive_onchain_request;
typedef struct wire_cst_receive_payment_request {
  uint64_t amount_msat;
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_list_prim_u_8_strict *preimage;
  struct wire_cst_opening_fee_params *opening_fee_params;
  bool *use_description_hash;
  uint32_t *expiry;
  uint32_t *cltv;
} wire_cst_receive_payment_request;
typedef struct wire_cst_redeem_onchain_funds_request {
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_redeem_onchain_funds_request;
typedef struct wire_cst_refund_request {
  struct wire_cst_list_prim_u_8_strict *swap_address;
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_refund_request;
typedef struct wire_cst_report_payment_failure_details {
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *comment;
} wire_cst_report_payment_failure_details;
typedef union ReportIssueRequestKind {
  struct wire_cst_ReportIssueRequest_PaymentFailure PaymentFailure;
} ReportIssueRequestKind;
typedef struct wire_cst_report_issue_request {
  int32_t tag;
  union ReportIssueRequestKind kind;
} wire_cst_report_issue_request;
typedef struct wire_cst_send_onchain_request {
  uint64_t amount_sat;
  struct wire_cst_list_prim_u_8_strict *onchain_recipient_address;
  struct wire_cst_list_prim_u_8_strict *pair_hash;
  uint32_t sat_per_vbyte;
} wire_cst_send_onchain_request;
typedef struct wire_cst_send_payment_request {
  struct wire_cst_list_prim_u_8_strict *bolt11;
  uint64_t *amount_msat;
  struct wire_cst_list_prim_u_8_strict *label;
} wire_cst_send_payment_request;
typedef struct wire_cst_list_tlv_entry {
  struct wire_cst_tlv_entry *ptr;
  int32_t len;
} wire_cst_list_tlv_entry;
typedef struct wire_cst_send_spontaneous_payment_request {
  struct wire_cst_list_prim_u_8_strict *node_id;
  uint64_t amount_msat;
  struct wire_cst_list_tlv_entry *extra_tlvs;
  struct wire_cst_list_prim_u_8_strict *label;
} wire_cst_send_spontaneous_payment_request;
typedef struct wire_cst_sign_message_request {
  struct wire_cst_list_prim_u_8_strict *message;
} wire_cst_sign_message_request;
typedef struct wire_cst_static_backup_request {
  struct wire_cst_list_prim_u_8_strict *working_dir;
} wire_cst_static_backup_request;
typedef union SuccessActionProcessedKind {
  struct wire_cst_SuccessActionProcessed_Aes Aes;
  struct wire_cst_SuccessActionProcessed_Message Message;
  struct wire_cst_SuccessActionProcessed_Url Url;
} SuccessActionProcessedKind;
typedef struct wire_cst_success_action_processed {
  int32_t tag;
  union SuccessActionProcessedKind kind;
} wire_cst_success_action_processed;
typedef struct wire_cst_list_String {
  struct wire_cst_list_prim_u_8_strict **ptr;
  int32_t len;
} wire_cst_list_String;
typedef struct wire_cst_swap_info {
  struct wire_cst_list_prim_u_8_strict *bitcoin_address;
  int64_t created_at;
  int64_t lock_height;
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *preimage;
  struct wire_cst_list_prim_u_8_strict *private_key;
  struct wire_cst_list_prim_u_8_strict *public_key;
  struct wire_cst_list_prim_u_8_strict *swapper_public_key;
  struct wire_cst_list_prim_u_8_strict *script;
  struct wire_cst_list_prim_u_8_strict *bolt11;
  uint64_t paid_msat;
  uint64_t total_incoming_txs;
  uint64_t confirmed_sats;
  uint64_t unconfirmed_sats;
  int32_t status;
  struct wire_cst_list_String *refund_tx_ids;
  struct wire_cst_list_String *unconfirmed_tx_ids;
  struct wire_cst_list_String *confirmed_tx_ids;
  int64_t min_allowed_deposit;
  int64_t max_allowed_deposit;
  int64_t max_swapper_payable;
  struct wire_cst_list_prim_u_8_strict *last_redeem_error;
  struct wire_cst_opening_fee_params *channel_opening_fees;
  uint32_t *confirmed_at;
} wire_cst_swap_info;
typedef struct wire_cst_reverse_swap_info {
  struct wire_cst_list_prim_u_8_strict *id;
  struct wire_cst_list_prim_u_8_strict *claim_pubkey;
  struct wire_cst_list_prim_u_8_strict *lockup_txid;
  struct wire_cst_list_prim_u_8_strict *claim_txid;
  uint64_t onchain_amount_sat;
  int32_t status;
} wire_cst_reverse_swap_info;
typedef struct wire_cst_symbol {
  struct wire_cst_list_prim_u_8_strict *grapheme;
  struct wire_cst_list_prim_u_8_strict *template;
  bool *rtl;
  uint32_t *position;
} wire_cst_symbol;
struct wire_cst_prepare_refund_request *frbgen_breez_sdk_cst_new_box_autoadd_prepare_refund_request(void);
struct wire_cst_receive_onchain_request *frbgen_breez_sdk_cst_new_box_autoadd_receive_onchain_request(void);
struct wire_cst_receive_payment_request *frbgen_breez_sdk_cst_new_box_autoadd_receive_payment_request(void);
struct wire_cst_redeem_onchain_funds_request *frbgen_breez_sdk_cst_new_box_autoadd_redeem_onchain_funds_request(void);
struct wire_cst_refund_request *frbgen_breez_sdk_cst_new_box_autoadd_refund_request(void);
struct wire_cst_report_issue_request *frbgen_breez_sdk_cst_new_box_autoadd_report_issue_request(void);
struct wire_cst_report_payment_failure_details *frbgen_breez_sdk_cst_new_box_autoadd_report_payment_failure_details(void);
struct wire_cst_reverse_swap_fees_request *frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_fees_request(void);
struct wire_cst_reverse_swap_info *frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_info(void);
struct wire_cst_send_onchain_request *frbgen_breez_sdk_cst_new_box_autoadd_send_onchain_request(void);
struct wire_cst_send_payment_request *frbgen_breez_sdk_cst_new_box_autoadd_send_payment_request(void);
struct wire_cst_send_spontaneous_payment_request *frbgen_breez_sdk_cst_new_box_autoadd_send_spontaneous_payment_request(void);
struct wire_cst_sign_message_request *frbgen_breez_sdk_cst_new_box_autoadd_sign_message_request(void);
struct wire_cst_static_backup_request *frbgen_breez_sdk_cst_new_box_autoadd_static_backup_request(void);
struct wire_cst_success_action_processed *frbgen_breez_sdk_cst_new_box_autoadd_success_action_processed(void);
struct wire_cst_swap_info *frbgen_breez_sdk_cst_new_box_autoadd_swap_info(void);
struct wire_cst_symbol *frbgen_breez_sdk_cst_new_box_autoadd_symbol(void);
uint32_t *frbgen_breez_sdk_cst_new_box_autoadd_u_32(uint32_t value);
uint64_t *frbgen_breez_sdk_cst_new_box_autoadd_u_64(uint64_t value);