libs/sdk-flutter/lib/breez_sdk_core_bindings_generated.dart


  late final _frbgen_breez_sdk_cst_new_box_autoadd_prepare_refund_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_prepare_refund_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_prepare_refund_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_prepare_refund_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_prepare_refund_requestPtr
          .asFunction<ffi.Pointer<wire_cst_prepare_refund_request> Function()>();

  ffi.Pointer<wire_cst_receive_onchain_request>
      frbgen_breez_sdk_cst_new_box_autoadd_receive_onchain_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_receive_onchain_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_receive_onchain_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_receive_onchain_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_receive_onchain_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_receive_onchain_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_receive_onchain_requestPtr
          .asFunction<ffi.Pointer<wire_cst_receive_onchain_request> Function()>();

  ffi.Pointer<wire_cst_receive_payment_request>
      frbgen_breez_sdk_cst_new_box_autoadd_receive_payment_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_receive_payment_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_receive_payment_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_receive_payment_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_receive_payment_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_receive_payment_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_receive_payment_requestPtr
          .asFunction<ffi.Pointer<wire_cst_receive_payment_request> Function()>();

  ffi.Pointer<wire_cst_redeem_onchain_funds_request>
      frbgen_breez_sdk_cst_new_box_autoadd_redeem_onchain_funds_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_redeem_onchain_funds_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_redeem_onchain_funds_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_redeem_onchain_funds_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_redeem_onchain_funds_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_redeem_onchain_funds_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_redeem_onchain_funds_requestPtr
          .asFunction<ffi.Pointer<wire_cst_redeem_onchain_funds_request> Function()>();

  ffi.Pointer<wire_cst_refund_request> frbgen_breez_sdk_cst_new_box_autoadd_refund_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_refund_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_refund_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_refund_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_refund_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_refund_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_refund_requestPtr
          .asFunction<ffi.Pointer<wire_cst_refund_request> Function()>();

  ffi.Pointer<wire_cst_report_issue_request> frbgen_breez_sdk_cst_new_box_autoadd_report_issue_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_report_issue_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_report_issue_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_report_issue_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_report_issue_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_report_issue_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_report_issue_requestPtr
          .asFunction<ffi.Pointer<wire_cst_report_issue_request> Function()>();

  ffi.Pointer<wire_cst_report_payment_failure_details>
      frbgen_breez_sdk_cst_new_box_autoadd_report_payment_failure_details() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_report_payment_failure_details();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_report_payment_failure_detailsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_report_payment_failure_details> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_report_payment_failure_details');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_report_payment_failure_details =
      _frbgen_breez_sdk_cst_new_box_autoadd_report_payment_failure_detailsPtr
          .asFunction<ffi.Pointer<wire_cst_report_payment_failure_details> Function()>();

  ffi.Pointer<wire_cst_reverse_swap_fees_request>
      frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_fees_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_fees_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_fees_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_reverse_swap_fees_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_fees_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_fees_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_fees_requestPtr
          .asFunction<ffi.Pointer<wire_cst_reverse_swap_fees_request> Function()>();

  ffi.Pointer<wire_cst_reverse_swap_info> frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_info() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_info();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_reverse_swap_info> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_info');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_info =
      _frbgen_breez_sdk_cst_new_box_autoadd_reverse_swap_infoPtr
          .asFunction<ffi.Pointer<wire_cst_reverse_swap_info> Function()>();

  ffi.Pointer<wire_cst_send_onchain_request> frbgen_breez_sdk_cst_new_box_autoadd_send_onchain_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_send_onchain_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_send_onchain_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_send_onchain_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_send_onchain_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_send_onchain_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_send_onchain_requestPtr
          .asFunction<ffi.Pointer<wire_cst_send_onchain_request> Function()>();

  ffi.Pointer<wire_cst_send_payment_request> frbgen_breez_sdk_cst_new_box_autoadd_send_payment_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_send_payment_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_send_payment_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_send_payment_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_send_payment_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_send_payment_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_send_payment_requestPtr
          .asFunction<ffi.Pointer<wire_cst_send_payment_request> Function()>();

  ffi.Pointer<wire_cst_send_spontaneous_payment_request>
      frbgen_breez_sdk_cst_new_box_autoadd_send_spontaneous_payment_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_send_spontaneous_payment_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_send_spontaneous_payment_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_send_spontaneous_payment_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_send_spontaneous_payment_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_send_spontaneous_payment_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_send_spontaneous_payment_requestPtr
          .asFunction<ffi.Pointer<wire_cst_send_spontaneous_payment_request> Function()>();

  ffi.Pointer<wire_cst_sign_message_request> frbgen_breez_sdk_cst_new_box_autoadd_sign_message_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_sign_message_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_sign_message_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_sign_message_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_sign_message_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_sign_message_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_sign_message_requestPtr
          .asFunction<ffi.Pointer<wire_cst_sign_message_request> Function()>();

  ffi.Pointer<wire_cst_static_backup_request> frbgen_breez_sdk_cst_new_box_autoadd_static_backup_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_static_backup_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_static_backup_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_static_backup_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_static_backup_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_static_backup_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_static_backup_requestPtr
          .asFunction<ffi.Pointer<wire_cst_static_backup_request> Function()>();

  ffi.Pointer<wire_cst_success_action_processed>
      frbgen_breez_sdk_cst_new_box_autoadd_success_action_processed() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_success_action_processed();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_success_action_processedPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_success_action_processed> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_success_action_processed');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_success_action_processed =
      _frbgen_breez_sdk_cst_new_box_autoadd_success_action_processedPtr
          .asFunction<ffi.Pointer<wire_cst_success_action_processed> Function()>();

  ffi.Pointer<wire_cst_swap_info> frbgen_breez_sdk_cst_new_box_autoadd_swap_info() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_swap_info();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_swap_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_swap_info> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_swap_info');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_swap_info =
      _frbgen_breez_sdk_cst_new_box_autoadd_swap_infoPtr
          .asFunction<ffi.Pointer<wire_cst_swap_info> Function()>();

  ffi.Pointer<wire_cst_symbol> frbgen_breez_sdk_cst_new_box_autoadd_symbol() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_symbol();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_symbolPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_symbol> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_symbol');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_symbol =
      _frbgen_breez_sdk_cst_new_box_autoadd_symbolPtr.asFunction<ffi.Pointer<wire_cst_symbol> Function()>();

  ffi.Pointer<ffi.Uint32> frbgen_breez_sdk_cst_new_box_autoadd_u_32(
    int value,
  ) {
    return _frbgen_breez_sdk_cst_new_box_autoadd_u_32(
      value,
    );
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_u_32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint32> Function(ffi.Uint32)>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_u_32');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_u_32 =
      _frbgen_breez_sdk_cst_new_box_autoadd_u_32Ptr.asFunction<ffi.Pointer<ffi.Uint32> Function(int)>();

  ffi.Pointer<ffi.Uint64> frbgen_breez_sdk_cst_new_box_autoadd_u_64(
    int value,
  ) {
    return _frbgen_breez_sdk_cst_new_box_autoadd_u_64(
      value,
    );
  }
